--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 		<h1> &spades; &clubs; Suit War &diams; &hearts;</h1>
 		
+			<div id='deal' class="button"></div>
+			<br><br>
+			
+		
 			<div id="score"> 
 				<div id='p1score' class="scoreBoard"></div>
 				<div id='p2score' class="scoreBoard"></div>
