--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<h1> &spades; &clubs; Suit War &diams; &hearts;</h1>
 		
-			<div id='deal' class="button"></div>
+			<div id='deal' class="button"><h2>Flip</h2></div>
 			<br><br>
 			
 		
@@ -26,10 +26,12 @@
 			</div>	
 
 			<div id="deck">
-				<div id='s1stack' class="cards"></div>
-				<div id='s1show' class="cards"></div>
-				<div id='s2show' class="cards"></div>
-				<div id='s2stack' class="cards"></div>
+			<h1>
+				<div id='s1stack' class="cards"><br>&#937;</div>
+				<div id='s1show' class="cards"><br>?</div>
+				<div id='s2show' class="cards"><br>?</div>
+				<div id='s2stack' class="cards"><br>&#937;</div>
+			</h1>	
 			</div>
 			
 	</div>	
