--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
 	<center>
 	<div id="gameBoard">
 
+		<div id='gameName'>
 		<h1> &spades; &clubs; Suit War &diams; &hearts;</h1>
+		</div>
+		<b>Rules:</b> &#10102; &spades; vs &hearts; &#10103; <i>Reshuffle after each turn</i> &#10104; <i>13 points wins</i> <br><br>
+		
 		
 			<div id='deal' class="button"><h2>Flip</h2></div>
 			<br><br>
 			
 		
 			<div id="score"> 
-				<div id='p1score' class="scoreBoard"></div>
-				<div id='p2score' class="scoreBoard"></div>
-				<br><br><br><br><br>
+			<h3>
+				<div id='p1score' class="scoreBoard">Spades:<br>0</div>
+				<div id='p2score' class="scoreBoard">Hearts:<br>0</div>
+				<br><br><br>
+			</h3>	
 			</div>	
 
 			<div id="deck">
