--- a/projects.html
+++ b/projects.html
@@ -16,14 +16,10 @@
 		<li><a href="game.html">Game</a></li>
 		<li><a href="projects.html">Other Projects</a></li>
 	</ul>
-	<br>
 	
-	<center><h1>About this project</h1></center>
-	
-	<p>This is a simple game where the object is basically to have the highest card.</p>
-	<p>The winner is the first one who reaches 13 points.</p>
-	<p>The game is Spades vs Hearts.</p>
-	<p>The green "flip" button controls the game.</p> 
+	<p> <a href ="http://www.p1.savetheborg.org">Project 1</a></p>
+	<p> <a href ="http://www.p2.savetheborg.org">Project 2</a></p>
+	<p> <a href ="http://www.p3.savetheborg.org">Project 3</a></p>
 	
 			
 </body>
