--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<title>Suit War</title>
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 	<link rel="stylesheet" href="css/features.css" type="text/css">
@@ -18,7 +19,7 @@
 	</ul>
 	<br>
 	
-	<center><h1>About this project</h1></center>
+	<h1>About this project</h1>
 	
 	<p>This is a simple game where the object is basically to have the highest card.</p>
 	<p>The winner is the first one who reaches 13 points.</p>
