--- a/game.html
+++ b/game.html
@@ -2,6 +2,7 @@
 
 <head>
 	<title>Suit War</title>
+	<meta charset="UTF-8">	
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 	<link rel="stylesheet" href="css/features.css" type="text/css">
 	
@@ -17,8 +18,8 @@
 		<li><a href="projects.html">Other Projects</a></li>
 	</ul>
 	
-	<center>
-	<div id="gameBoard">
+
+	<div id='gameBoard' class="123">
 
 		<div id='gameName'>
 		<h1> &spades; &clubs; Suit War &diams; &hearts;</h1>
@@ -30,27 +31,23 @@
 			<br><br>
 			
 		
-			<div id="score"> 
-			<h3>
-				<div id='p1score' class="scoreBoard">Spades:<br>0</div>
-				<div id='p2score' class="scoreBoard">Hearts:<br>0</div>
-				<br><br><br>
-			</h3>	
+			<div id='score'> 
+				<div id='p1score' class="scoreBoard"><h3>Spades:<br>0</h3></div>
+				<div id='p2score' class="scoreBoard"><h3>Hearts:<br>0</h3></div>
+				<br><br><br><br><br>	
 			</div>	
 
 			<div id="deck">
-			<h1>
-				<div id='s1stack' class="cards"><br>&#937;</div>
-				<div id='s1show' class="cards"><br>?</div>
-				<div id='s2show' class="cards"><br>?</div>
-				<div id='s2stack' class="cards"><br>&#937;</div>
-			</h1>	
+				<div id='s1stack' class="cards"><h1><br>&#937;</h1></div>
+				<div id='s1show' class="cards"><h1><br>?</h1></div>
+				<div id='s2show' class="cards"><h1><br>?</h1></div>
+				<div id='s2stack' class="cards"><h1><br>&#937;</h1></div>
 			</div>
 			
 	</div>	
 
 	<script src="js/black.js"></script>
-	</center>			
+		
 </body>
 
 
