--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 
 <head>
 	<title>Suit War</title>
+	<meta charset="UTF-8">	
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 	<link rel="stylesheet" href="css/features.css" type="text/css">
 	
